tests/ui/fail_register_missing.rs
#[thin_delegate::derive_delegate(ToString)]
enum Hoge {
    A(String),
    B(char),
}

fn main() {}
